fix: protect only active trait presets